--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,114 +1,38 @@
-name: generate pacman animation
+name: generate animation
 
 on:
+  # run automatically every day at midnight
   schedule:
-    - cron: "0 0 * * *"  # todo dia à meia-noite
+    - cron: "0 0 * * *"
+  
+  # allows to manually run the job at any time
   workflow_dispatch:
+  
+  # run on every push on the master branch
   push:
     branches:
       - master
 
 jobs:
   generate:
-    permissions:
+    permissions: 
       contents: write
     runs-on: ubuntu-latest
-    timeout-minutes: 15
-
+    timeout-minutes: 5
+    
     steps:
-      # 1️⃣ Checkout repo
-      - name: Checkout repo
-        uses: actions/checkout@v3
-
-      # 2️⃣ Setup Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
+      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: generate github-contribution-grid-snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          node-version: '20'
-
-      # 3️⃣ Install dependencies
-      - name: Install dependencies
-        run: |
-          npm init -y
-          npm install axios fs-extra
-
-      # 4️⃣ Generate Pac-Man SVG animation
-      - name: Generate Pac-Man SVG
-        run: |
-          node << 'EOF'
-          const axios = require('axios');
-          const fs = require('fs-extra');
-
-          const username = 'alanrantes'; // seu username fixo
-          const outDir = 'dist';
-          await fs.ensureDir(outDir);
-          const outPath = `${outDir}/pacman-contributions.svg`;
-
-          // 1️⃣ Pega contributions do GitHub
-          const url = `https://github.com/users/${username}/contributions`;
-          const { data: html } = await axios.get(url);
-
-          const regex = /<rect .*?data-count="(\d+?)".*?data-date="(.*?)".*?\/>/g;
-          let match;
-          const days = [];
-          while ((match = regex.exec(html)) !== null) {
-            days.push(parseInt(match[1]) > 0 ? 1 : 0);
-          }
-
-          // 2️⃣ Configurações do SVG
-          const cellSize = 12;
-          const rows = 7;
-          const cols = 53;
-          const svgWidth = cols * cellSize;
-          const svgHeight = rows * cellSize;
-
-          let svg = `<svg xmlns="http://www.w3.org/2000/svg" width="${svgWidth}" height="${svgHeight}">`;
-
-          // 3️⃣ Pontos (contribuições)
-          days.forEach((d,i)=>{
-            if(d){
-              const x = Math.floor(i/rows)*cellSize + cellSize/2;
-              const y = (i%rows)*cellSize + cellSize/2;
-              svg += `<circle cx="${x}" cy="${y}" r="3" fill="yellow"/>`;
-            }
-          });
-
-          // 4️⃣ Caminho do Pac-Man
-          const path = days.map((d,i)=>{
-            const x = Math.floor(i/rows)*cellSize + cellSize/2;
-            const y = (i%rows)*cellSize + cellSize/2;
-            return i===0 ? `M${x},${y}` : ` L${x},${y}`;
-          }).join(' ');
-
-          // 5️⃣ Pac-Man animado (boca abrindo)
-          svg += `
-            <circle r="5" fill="orange" id="pacman">
-              <animateMotion dur="5s" repeatCount="indefinite">
-                <mpath><path d="${path}"/></mpath>
-              </animateMotion>
-              <animateTransform attributeName="transform" type="rotate" values="0 0 0; 30 0 0; 0 0 0" dur="0.2s" repeatCount="indefinite"/>
-            </circle>
-          `;
-
-          // 6️⃣ Fantasmas
-          const ghostColors = ['red','cyan','pink','orange'];
-          ghostColors.forEach((color, idx)=>{
-            svg += `
-              <circle r="5" fill="${color}" opacity="0.7">
-                <animateMotion dur="6s" begin="${idx*1.5}s" repeatCount="indefinite">
-                  <mpath><path d="${path}"/></mpath>
-                </animateMotion>
-              </circle>
-            `;
-          });
-
-          svg += '</svg>';
-          await fs.writeFile(outPath, svg);
-          console.log(`✅ Pac-Man SVG saved at ${outPath}`);
-        EOF
-
-      # 7️⃣ Push para a branch output
-      - name: Push to output branch
+          github_user_name: ${{ github.repository_owner }}
+          outputs: |
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+          
+      # push the content of <build_dir> to a branch
+      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+      - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
